adjusted height sizing for about page

--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -55,7 +55,7 @@
 	--height1: calc(100dvh - var(--nav-height));
 	--height2: calc(var(--height1) - calc(var(--padding) * 2));
 	--about-height: calc(var(--height2) - calc(var(--line-height) * 4));
-	height: var(--about-height);
+	max-height: var(--about-height);
 }
 .about-media-small {
 	display: block;
@@ -87,7 +87,7 @@
 	}
 	.about-media-big {
 		grid-column: auto;
-		height: 100vmin;
+		max-height: 100vmin;
 	}
 	.about-media-small {
 		grid-column: auto;
